<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.tourguideapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:src="@drawable/wallpaper1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000"
            android:alpha="0.6"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/welcome_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:textSize="32sp"
            android:text="@string/welcome_header" />

        <TextView
            android:id="@+id/welcome_desc"
            android:layout_below="@id/welcome_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/welcome_desc" />

    </RelativeLayout>

    <!-- Options -->

    <LinearLayout
        android:id="@+id/rows_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/row_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurants_btn"
                style="@style/OptionStyle"
                android:background="#3586FF"
                android:text="@string/restaurants_btn"/>
            <TextView
                android:id="@+id/shopping_btn"
                style="@style/OptionStyle"
                android:background="#E435FF"
                android:text="@string/shopping_btn"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_two"
            android:layout_below="@id/row_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/venues_btn"
                style="@style/OptionStyle"
                android:background="#FF2F2F"
                android:text="@string/venues_btn"/>
            <TextView
                android:id="@+id/museums_btn"
                style="@style/OptionStyle"
                android:background="#16FF22"
                android:text="@string/museums_btn"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
