<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.android.tourguideapp.SpotViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/spot_icon"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <LinearLayout
                android:paddingLeft="12dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/spot_name"
                    style="@style/SpotItem"
                    tools:text="Name"/>

                <TextView
                    android:id="@+id/spot_address"
                    style="@style/SpotItem"
                    tools:text="Address"/>

                <TextView
                    android:id="@+id/spot_city"
                    style="@style/SpotItem"
                    tools:text="City"/>

                <TextView
                    android:id="@+id/spot_state"
                    style="@style/SpotItem"
                    tools:text="State"/>

                <TextView
                    android:id="@+id/spot_zipcode"
                    style="@style/SpotItem"
                    tools:text="Zip Code"/>

                <TextView
                    android:id="@+id/spot_weblink"
                    style="@style/SpotItem"
                    android:autoLink="web"
                    tools:text="Web Link"/>

                <TextView
                    android:id="@+id/spot_phone"
                    style="@style/SpotItem"
                    android:autoLink="phone"
                    tools:text="Phone Number"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/maps_btn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/maps_btn"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/share_email_btn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/share_email_btn"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/share_text_btn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/share_text_btn"
                android:layout_margin="4dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
